# multi-task-agent-workflow

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
agents/: __init__.py  base_agent.py  decision_agent.py  retriever_agent.py
database/: __init__.py  connection.py  models.py
db/sql/: 01_pgvector_schema.sql
prompts/: decision_prompts.py  retriever_prompts.py
rag/: ingest.py  ingest_with_retry.py  orchestrator.py
repositories/: review_repository.py
routes/: __init__.py  index.py  review.py
schemas/: common.py  review.py
settings/: settings.py
tests/: test_complete_pipeline.py  test_decision.py  test_orchestration.py  test_rag_minimal.py  test_rag_simple.py  test_retriever.py
