[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.36.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
]
